# lumiere-client-lifx

./: .env.sample  README.md  pyproject.toml  requirements.txt
deploy/: lumiere-client-lifx.init.d
lumiere-client-lifx/: client.py
